--- a/carrier-io/Jenkinsfile
+++ b/carrier-io/Jenkinsfile
@@ -45,7 +45,7 @@ node {
                 deleteDir()
                 step([$class: 'WsCleanup'])
                 checkout scm
-                sharedLib = load "carrier-io/shared.groovy"
+                sharedLib = load "shared.groovy"
                 context = sharedLib.getContext()
             }
 
