--- a/carrier-io/system.properties
+++ b/carrier-io/system.properties
@@ -1,3 +1,5 @@
+stack_name="performance-testing-load-generators"
+monitoring_stack_name="monitoring-performance-testing"
 reportingInstanceUrl=ec2-54-87-82-65.compute-1.amazonaws.com
 targetUrl=okapi-gcp1-us-east-1.int.aws.folio.org
 targetRegion=us-east-1
