--- a/carrier-io/Jenkinsfile
+++ b/carrier-io/Jenkinsfile
@@ -5,7 +5,7 @@ properties([
     [$class  : 'BuildDiscarderProperty',
     strategy: [$class: 'LogRotator', numToKeepStr: '30']],
     disableConcurrentBuilds(), 
-    //parameters([
+    parameters([
     //    choice(choices: "baseline\ncapacity\nfix_load\nlongevity", description: "Test type", name: "testType"),
     //    string(defaultValue: "8", description: "vUsers count for test execution", name: "users"),
     //    string(defaultValue: "80", description: "Ramp up, s", name: "rampUp"),
@@ -26,7 +26,10 @@ properties([
     //    string(defaultValue: "43-57", description: "user flow distribution", name: "distribution"),
     //    string(defaultValue: "us-east-1", description: "region", name: "targetRegion"),
     //    string(defaultValue: "gcp1-pvt", description: "cluster name to monitor", name: "targetCluster")
-// ])
+        booleanParam(name: 'sendReport', defaultValue: false, description: "Send report to standart channel"),
+        string(defaultValue: "", description: "List of tests to be included", name: "includeTestsList"),
+        string(defaultValue: "", description: "List of tests to be excluded", name: "excludeTestsList")
+    ])
 ])
     
 def sharedLib
