--- a/carrier-io/Jenkinsfile
+++ b/carrier-io/Jenkinsfile
@@ -20,13 +20,12 @@ properties([
     //    string(defaultValue: "3", description: "Ram memory in GB avaliable per load generator", name: "lgMemory"),
     //    string(defaultValue: "okapi-gcp1-us-east-1.int.aws.folio.org", description: "FOLIO environment (Okapi URI) against which tests will be executed", name: "targetUrl"),
     //    string(defaultValue: "ec2-54-87-82-65.compute-1.amazonaws.com", description: "Environment where reporting tools are located", name: "reportingInstanceUrl"),
-    //    string(defaultValue: "", description: """Recipients for email notification in format "user1@mail.com","user2@mail.com","user3@mail.com" """, name: "emailsList"),
     //    string(defaultValue: "7e28f971-6499-4799-b42c-fd1a6bb8f585", description: "Galloper task id for post processing", name: "galloperPostProccessingTaskId"),
     //    string(defaultValue: "481d5b9d-fd90-45c6-a38f-0fad1b4d8572", description: "Galloper task id for notifications", name: "galloperTaskIdForNotifications"),
     //    string(defaultValue: "43-57", description: "user flow distribution", name: "distribution"),
     //    string(defaultValue: "us-east-1", description: "region", name: "targetRegion"),
     //    string(defaultValue: "gcp1-pvt", description: "cluster name to monitor", name: "targetCluster")
-        booleanParam(name: 'sendReport', defaultValue: false, description: "Send report to standart channel"),
+        string(defaultValue: "", description: """Recipients for email notification in format "user1@mail.com","user2@mail.com","user3@mail.com" """, name: "emailsList"),
         string(defaultValue: "", description: "List of tests to be excluded", name: "excludeTestsList")
     ])
 ])
@@ -67,12 +66,9 @@ node {
             }    
 
             stage("Execute tests") {
-                sharedLib.executePerformanceTest(context, params.excludeTestsList)
+                sharedLib.executePerformanceTest(context, params.excludeTestsList, params.emailsList)
             }
 
-            //stage("Send Notification") {
-            //    sharedLib.sendNotification(context)
-            //}
         }
 
     } catch (Exception err){
