--- a/carrier-io/system.properties
+++ b/carrier-io/system.properties
@@ -1,6 +1,7 @@
 stackName="performance-testing-load-generators"
 reportingInstanceUrl=ec2-54-87-82-65.compute-1.amazonaws.com
 targetUrl=okapi-gcp1-us-east-1.int.aws.folio.org
+galloperTaskIdForNotifications=481d5b9d-fd90-45c6-a38f-0fad1b4d8572
 targetRegion=us-east-1
 projectId=1
 bucket=jmeter
