--- a/carrier-io/system.properties
+++ b/carrier-io/system.properties
@@ -1,7 +1,7 @@
 stackName="performance-testing-load-generators"
 reportingInstanceUrl=ec2-54-87-82-65.compute-1.amazonaws.com
 targetUrl=okapi-gcp1-us-east-1.int.aws.folio.org
-galloperTaskIdForNotifications=481d5b9d-fd90-45c6-a38f-0fad1b4d8572
+notificationsWebHook=https://1cu58z65od.execute-api.us-east-1.amazonaws.com/default/ptf-email-notifications
 targetRegion=us-east-1
 projectId=1
 bucket=jmeter
@@ -12,6 +12,7 @@ targetCluster=gcp1-pvt
 lgMemory=3
 populateDatabase=false
 excludeTestsList=
+testType=fix_load
 duration=30
 users=8
 loadGeneratorsCount=1
