--- a/carrier-io/system.properties
+++ b/carrier-io/system.properties
@@ -4,14 +4,13 @@ targetUrl=okapi-gcp1-us-east-1.int.aws.folio.org
 notificationsWebHook=https://1cu58z65od.execute-api.us-east-1.amazonaws.com/default/ptf-email-notifications
 targetRegion=us-east-1
 projectId=1
-bucket=jmeter
+bucket=automation
 loadGeneratorsCount=1
 instanceType=t3.medium
 spotPrice=0.0125
 targetCluster=gcp1-pvt
 lgMemory=3
 populateDatabase=false
-excludeTestsList=
 testType=fix_load
 duration=30
 users=8
@@ -20,7 +19,7 @@ rampUp=80
 tenant=fs09000000
 testType=fix_load
 distribution=43-57
-updateArtifact=true
+uploadArtifact=true
 
 
 
