--- a/carrier-io/system.properties
+++ b/carrier-io/system.properties
@@ -12,6 +12,7 @@ targetCluster=gcp1-pvt
 lgMemory=3
 populateDatabase=false
 testType=fix_load
+envType=dev
 duration=30
 users=8
 loadGeneratorsCount=1
