--- a/carrier-io/system.properties
+++ b/carrier-io/system.properties
@@ -11,11 +11,11 @@ spotPrice=0.0125
 targetCluster=gcp1-pvt
 lgMemory=3
 populateDatabase=false
-testType=fix_load
-envType=dev
+testType=demo
+envType=demo
 duration=30
 users=8
-loadGeneratorsCount=1
+loadGeneratorsCount=3
 rampUp=80
 tenant=fs09000000
 testType=fix_load
