--- a/carrier-io/system.properties
+++ b/carrier-io/system.properties
@@ -11,8 +11,8 @@ spotPrice=0.0125
 targetCluster=gcp1-pvt
 lgMemory=3
 populateDatabase=false
-testType=demo
-envType=demo
+testType=fix_load
+envType=ebsco
 duration=30
 users=8
 rampUp=80
