Changed cluster name

--- a/carrier-io/system.properties
+++ b/carrier-io/system.properties
@@ -8,7 +8,7 @@ bucket=automation
 loadGeneratorsCount=1
 instanceType=t3.medium
 spotPrice=0.0125
-targetCluster=gcp1-pvt
+targetCluster=performance-testing
 lgMemory=3
 populateDatabase=false
 testType=fix_load
