--- a/carrier-io/system.properties
+++ b/carrier-io/system.properties
@@ -1,7 +1,7 @@
 stackName="performance-testing-load-generators"
 reportingInstanceUrl=ec2-54-87-82-65.compute-1.amazonaws.com
 targetUrl=okapi-gcp1-us-east-1.int.aws.folio.org
-notificationsWebHook=https://1cu58z65od.execute-api.us-east-1.amazonaws.com/default/ptf-email-notifications
+notificationsWebHook=https://sl0v36tc50.execute-api.us-east-1.amazonaws.com/default/ptf-chat-notifications
 targetRegion=us-east-1
 projectId=1
 bucket=automation
