Changed InfluxDb URL

--- a/carrier-io/system.properties
+++ b/carrier-io/system.properties
@@ -1,5 +1,6 @@
 stackName="performance-testing-load-generators"
 reportingInstanceUrl=ec2-54-87-82-65.compute-1.amazonaws.com
+influxDbUrl=a7073dfec9bc04bb29eeaa69a935ca7d-1980773094.us-west-2.elb.amazonaws.com
 targetUrl=okapi-gcp1-us-east-1.int.aws.folio.org
 notificationsWebHook=https://sl0v36tc50.execute-api.us-east-1.amazonaws.com/default/ptf-chat-notifications
 targetRegion=us-east-1
