Added params: targeturl, influxUrl, influx port

--- a/carrier-io/system.properties
+++ b/carrier-io/system.properties
@@ -1,7 +1,10 @@
 stackName="performance-testing-load-generators"
 reportingInstanceUrl=ec2-54-87-82-65.compute-1.amazonaws.com
 influxDbUrl=ec2-54-87-82-65.compute-1.amazonaws.com
-targetUrl=okapi-gcp1-us-east-1.int.aws.folio.org
+influxDbPort=8086
+influxDbUser=admin
+influxDbPassword=admin
+targetUrl=ptf-okapi.ci.folio.org
 notificationsWebHook=https://sl0v36tc50.execute-api.us-east-1.amazonaws.com/default/ptf-chat-notifications
 targetRegion=us-east-1
 projectId=1
