--- a/carrier-io/system.properties
+++ b/carrier-io/system.properties
@@ -4,7 +4,7 @@ influxDbUrl=ec2-54-87-82-65.compute-1.amazonaws.com
 influxDbPort=8086
 influxDbUser=admin
 influxDbPassword=admin
-targetUrl=ptf-okapi.ci.folio.org
+targetUrl=perf-okapi.ci.folio.org:9130
 notificationsWebHook=https://sl0v36tc50.execute-api.us-east-1.amazonaws.com/default/ptf-chat-notifications
 targetRegion=us-east-1
 projectId=1
